# pyhtools-evil-files

./: README.md  pyproject.toml
.github/: CONTRIBUTING.md
examples/: generatorScript.py
examples/Malwares/: TelegramBackdoor.py  key_logger.py
examples/Malwares/backdoors/ssh/: ssh_backdoor.py  ssh_handler.py
examples/Malwares/data_harvesters/: TelegramDataHarvester.py  wifi-password-harvester.py
examples/Malwares/reverse_backdoors/ssh/: handler.py  reverse_backdoor.py
examples/Ransomwares/: dmsec_decrypter.py  dmsec_encrypter.py
examples/Worms/: DirClonerWorm.py
pyhtools_evil_files/malwares/: utils.py
pyhtools_evil_files/malwares/data_harvesters/: credential_harvester.py  ssh_cred_harvester.py  wireless_password_harvester.py
pyhtools_evil_files/malwares/installer/: cert.py
pyhtools_evil_files/ransomwares/dmsec/: encrypter.py
